<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />

</menu>